fix: horizontal scroll

--- a/user/themes/centra/scss/_content.scss
+++ b/user/themes/centra/scss/_content.scss
@@ -110,7 +110,7 @@
 
 .main__content {
   position: relative;
-  width: 780px;
+  max-width: 780px;
   padding: 35px 22px 45px 100px;
   display: flex;
   flex-direction: column;
